# algorithm

cpp/: algotest.sh  install.sh  test.sh
cpp/completions/: algotest.fish
cpp/template/: 408-template.cpp  leetcode-template.cpp
rust/: Cargo.toml
rust/src/leetcode/: 1.rs  13.rs  1486.rs  169.rs
rust/template/: leetcode-template.rs
