bin = [
{ name = "leet-1", path = "src/leetcode/1.rs" },
{ name = "leet-13", path = "src/leetcode/13.rs" },
{ name = "leet-169", path = "src/leetcode/169.rs" },
]

[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.rust]
# You shouldn't write unsafe code in Rustlings!
# 禁用unsafe
unsafe_code = "forbid"
# You don't need unstable features in Rustlings and shouldn't rely on them while learning Rust.
# 禁止使用不稳定的特性
unstable_features = "forbid"
# Dead code warnings can't be avoided in some exercises and might distract while learning.
dead_code = "allow"

[lints.clippy]
# You forgot a `todo!()`!
todo = "forbid"
# This can only happen by mistake in Rustlings.
empty_loop = "forbid"
# No infinite loops are needed in Rustlings.
# 禁用无限循环
infinite_loop = "deny"
# You shouldn't leak memory while still learning Rust!
# 不能内存泄漏
mem_forget = "deny"
# Currently, there are no disallowed methods. This line avoids problems when developing Rustlings.
disallowed_methods = "allow"
